general/platform-components/helm/kyverno-policies/tests/itGrundschutz/standard/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: itGrundschutz-standard-test
policies:
  - /tmp/kyverno-itGrundschutz-standard.yaml
resources:
  - resources/pods.yaml
results:
  - policy: disallow-privileged-containers-itgrundschutz
    rule: privileged-containers
    resources:
      - unprivileged-pod
    kind: Pod
    result: pass
  - policy: disallow-privileged-containers-itgrundschutz
    rule: privileged-containers
    resources:
      - privileged-pod
    kind: Pod
    result: fail
  - policy: disallow-privilege-escalation-itgrundschutz
    rule: privilege-escalation
    resources:
      - no-escalation-pod
    kind: Pod
    result: pass
  - policy: disallow-privilege-escalation-itgrundschutz
    rule: privilege-escalation
    resources:
      - escalation-pod
    kind: Pod
    result: fail
  - policy: require-pod-probes
    rule: validate-probes
    resources:
      - pod-with-probe
    kind: Pod
    result: pass
  - policy: require-pod-probes
    rule: validate-probes
    resources:
      - pod-without-probe
    kind: Pod
    result: fail
  - policy: require-requests-limits
    rule: require-requests-limits
    resources:
      - pod-with-limits
    kind: Pod
    result: pass
  - policy: require-requests-limits
    rule: require-requests-limits
    resources:
      - pod-without-limits
    kind: Pod
    result: fail
## Generating network policy existing ns

## generating network policy new ns
